[package]
name = "remote-signer"
version = "1.0.0"
authors = ["Andrew Westberg <andrewwestberg@gmail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
bech32 = "0.9.1"
blake2b_simd = "1.0.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
ed25519-dalek = "1.0.1"
futures = "0.3.26"
hex = "0.4.3"
prost = "0.11.6"
rand = "0.8.5"
regex = "1.7.1"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.8.3", features = ["tls-webpki-roots"] }

# logging
log = "0.4.17"
env_logger = "0.10.0"
pretty_env_logger = "0.4.0"

[build-dependencies]
tonic-build = "0.8.4"
